# Carla-foundation-driving-demo

./: .gitignore  Makefile  README.md  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
config/: default.yaml
config/profiles/: ci.yaml  linux_gpu.yaml  linux_local.yaml  local_dev.yaml  macos_docker.yaml  remote_carla.yaml  windows_local.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ARCHITECTURE_REVIEW.md  DATASET_VERSIONING.md  ENGINEERING_LOOPS.md  PHASE1_SMOKE_TEST.md  PHASE2_DATA_COLLECTION.md  PHASE3B_DATASET_HARDENING.md  PHASE3_5_ARCHITECTURE_REVISION.md  PHASE3_5_DESIGN_REVIEW.md  PHASE3_5_IMPLEMENTATION_REPORT.md  PHASE3_DATASET_ENGINEERING.md  PHASES.md  PROJECT_BRIEF.md  QUALITY_SYSTEM.md  REGRESSION_DETECTION.md  RUNTIME_PROFILES.md  SETUP.md
docs/ADR/: 0001-project-scaffold.md  0002-dataset-engineering-design.md  0003-dataset-hardening-design.md  0004-engineering-loop-architecture.md  0005-quality-scoring-strategy.md  0006-artifact-versioning.md  0007-regression-detection.md  0008-coverage-planning.md  0009-engineering-dashboard.md  0010-future-ml-integration.md  0011-experiment-tracking-lineage.md
scripts/: _format.py  build_dataset.py  collect_data.py  collect_expert_episode.py  compare_datasets.py  dataset_dashboard.py  dataset_quality.py  dataset_review.py  dataset_version.py  diagnose.py  inspect_dataset.py  recommend_data.py  smoke_test.py  start_carla_docker.sh  start_carla_windows.ps1  train.py  validate_episode.py
src/: __init__.py
src/agents/: __init__.py  autopilot.py
src/data/: __init__.py  dataset_alignment.py  dataset_builder.py  dataset_discovery.py  dataset_duplicates.py  dataset_io.py  dataset_outliers.py  dataset_schemas.py  dataset_splits.py  dataset_statistics.py  episode.py  recorder.py  schemas.py  validation.py  writers.py
src/evaluation/: __init__.py
src/models/: __init__.py
src/quality/: __init__.py  artifacts.py  config.py  coverage.py  dashboard.py  dataset_metrics.py  gates.py  lineage.py  metrics.py  registry.py  regression.py  review.py  schemas.py  scoring.py  versioning.py
src/sensors/: __init__.py  camera.py
src/simulation/: __init__.py  client.py  expert_driver.py
src/training/: __init__.py
src/utils/: __init__.py  config.py  logging.py  runtime.py
tests/: __init__.py
tests/integration/: __init__.py  test_carla_connection.py
tests/unit/: __init__.py  test_config.py  test_dataset_engineering.py  test_episode.py  test_quality_engineering.py  test_runtime.py
